force-app/main/default/objects/Expense_Eligibility__c/Expense_Eligibility__c.object-meta.xml
<CustomObject>
    <label>Expense Eligibility</label>
    <pluralLabel>Expense Eligibilities</pluralLabel>
    <nameField>
        <label>Eligibility Number</label>
        <type>AutoNumber</type>
        <displayFormat>ELIG-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Defines expense eligibility rules per employee band per expense type. Each record specifies the rate type, rate amount, daily/monthly caps, distance thresholds, and receipt requirements. Admins manage these records to control the dynamic expense calculation engine.</description>
</CustomObject>