force-app/main/default/objects/Expense_Eligibility__c/fields/Allowed_Travel_Modes__c.field-meta.xml
<CustomField>
    <fullName>Allowed_Travel_Modes__c</fullName>
    <description>Travel modes and classes eligible for this band/type</description>
    <label>Allowed Travel Modes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
                <default>true</default>
                <label>All</label>
            </value>
            <value>
                <fullName>Bike</fullName>
            </value>
            <value>
                <fullName>Car</fullName>
            </value>
            <value>
                <fullName>Auto</fullName>
            </value>
            <value>
                <fullName>Own Bike</fullName>
            </value>
            <value>
                <fullName>Own Car</fullName>
            </value>
            <value>
                <fullName>Public Transport</fullName>
            </value>
            <value>
                <fullName>Bus: AC</fullName>
            </value>
            <value>
                <fullName>Bus: Non-AC</fullName>
            </value>
            <value>
                <fullName>Train: 1AC</fullName>
            </value>
            <value>
                <fullName>Train: 2AC</fullName>
            </value>
            <value>
                <fullName>Train: 3AC</fullName>
            </value>
            <value>
                <fullName>Train: Sleeper</fullName>
            </value>
            <value>
                <fullName>Train: General</fullName>
            </value>
            <value>
                <fullName>Flight: Business</fullName>
            </value>
            <value>
                <fullName>Flight: Economy</fullName>
            </value>
            <value>
                <fullName>Flight: Premium Economy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>