force-app/main/default/objects/Expense_Eligibility__c/fields/Auto_Create__c.field-meta.xml
<CustomField>
    <fullName>Auto_Create__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, this expense type is auto-created for each eligible day (e.g., DA, TA)</description>
    <label>Auto Create</label>
    <type>Checkbox</type>
</CustomField>