force-app/main/default/objects/Expense_Eligibility__c/fields/Band__c.field-meta.xml
<CustomField>
    <fullName>Band__c</fullName>
    <label>Band</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Band 1</fullName><default>false</default><label>Band 1</label></value>
            <value><fullName>Band 2</fullName><default>false</default><label>Band 2</label></value>
            <value><fullName>Band 3</fullName><default>false</default><label>Band 3</label></value>
            <value><fullName>Band 4</fullName><default>false</default><label>Band 4</label></value>
            <value><fullName>Band 5</fullName><default>false</default><label>Band 5</label></value>
            <value><fullName>Band 6</fullName><default>false</default><label>Band 6</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>