force-app/main/default/objects/Expense_Eligibility__c/fields/City_Tier_2_Limit__c.field-meta.xml
<CustomField>
    <fullName>City_Tier_2_Limit__c</fullName>
    <description>Lodging limit for Tier 2 cities</description>
    <label>City Tier 2 Limit</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>