force-app/main/default/objects/Expense_Eligibility__c/fields/DA_Half_Day_Rate__c.field-meta.xml
<CustomField>
    <fullName>DA_Half_Day_Rate__c</fullName>
    <description>Daily Allowance rate for half-day (4-8 working hours). Full rate uses Rate_Amount__c</description>
    <label>DA Half Day Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>