force-app/main/default/objects/Expense_Eligibility__c/fields/Daily_KM_Limit__c.field-meta.xml
<CustomField>
    <fullName>Daily_KM_Limit__c</fullName>
    <description>Maximum KM claimable per day for this expense type</description>
    <label>Daily KM Limit</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>