force-app/main/default/objects/Expense_Eligibility__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
    <description>Admin notes describing this eligibility rule.</description>
</CustomField>