force-app/main/default/objects/Expense_Eligibility__c/fields/Effective_From__c.field-meta.xml
<CustomField>
    <fullName>Effective_From__c</fullName>
    <description>Policy effective start date. Null means always valid.</description>
    <label>Effective From</label>
    <type>Date</type>
</CustomField>