force-app/main/default/objects/Expense_Eligibility__c/fields/Effective_To__c.field-meta.xml
<CustomField>
    <fullName>Effective_To__c</fullName>
    <description>Policy effective end date. Null means no end date.</description>
    <label>Effective To</label>
    <type>Date</type>
</CustomField>