force-app/main/default/objects/Expense_Eligibility__c/fields/Expense_Category__c.field-meta.xml
<CustomField>
    <fullName>Expense_Category__c</fullName>
    <label>Expense Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Travel</fullName><default>true</default><label>Travel</label></value>
            <value><fullName>Miscellaneous</fullName><default>false</default><label>Miscellaneous</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>