force-app/main/default/objects/Expense_Eligibility__c/fields/Food_Limit__c.field-meta.xml
<CustomField>
    <fullName>Food_Limit__c</fullName>
    <label>Food Limit</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <defaultValue>0</defaultValue>
    <description>Maximum food allowance per day for this band and expense type.</description>
</CustomField>