force-app/main/default/objects/Expense_Eligibility__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <label>Is Active</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description>Controls whether this eligibility rule is currently active.</description>
</CustomField>