force-app/main/default/objects/Expense_Eligibility__c/fields/Lodging_Metro_Limit__c.field-meta.xml
<CustomField>
    <fullName>Lodging_Metro_Limit__c</fullName>
    <description>Maximum lodging amount for metro cities</description>
    <label>Lodging Metro Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>