force-app/main/default/objects/Expense_Eligibility__c/fields/Mandatory_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Mandatory_Remarks__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, remarks/notes are mandatory for this expense type</description>
    <label>Mandatory Remarks</label>
    <type>Checkbox</type>
</CustomField>