force-app/main/default/objects/Expense_Eligibility__c/fields/Max_Per_Day__c.field-meta.xml
<CustomField>
    <fullName>Max_Per_Day__c</fullName>
    <label>Max Per Day</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <defaultValue>0</defaultValue>
    <description>Maximum claimable amount per day. 0 means no daily cap.</description>
</CustomField>