force-app/main/default/objects/Expense_Eligibility__c/fields/Max_Per_Month__c.field-meta.xml
<CustomField>
    <fullName>Max_Per_Month__c</fullName>
    <label>Max Per Month</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <defaultValue>0</defaultValue>
    <description>Maximum claimable amount per month. 0 means no monthly cap.</description>
</CustomField>