force-app/main/default/objects/Expense_Eligibility__c/fields/Min_Distance_KM__c.field-meta.xml
<CustomField>
    <fullName>Min_Distance_KM__c</fullName>
    <label>Min Distance KM</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>2</scale>
    <defaultValue>0</defaultValue>
    <description>Minimum daily travel distance (km) required to be eligible for this expense type.</description>
</CustomField>