force-app/main/default/objects/Expense_Eligibility__c/fields/Per_KM_Bike_Rate__c.field-meta.xml
<CustomField>
    <fullName>Per_KM_Bike_Rate__c</fullName>
    <description>Per KM rate for Bike travel. Rate_Amount__c is the default/car rate</description>
    <label>Per KM Bike Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>