force-app/main/default/objects/Expense_Eligibility__c/fields/Rate_Amount__c.field-meta.xml
<CustomField>
    <fullName>Rate_Amount__c</fullName>
    <label>Rate Amount</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <defaultValue>0</defaultValue>
    <description>The per-unit rate amount (e.g., per day rate, per km rate). Not applicable for Actual rate type.</description>
</CustomField>