force-app/main/default/objects/Expense_Eligibility__c/fields/Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>Rate_Type__c</fullName>
    <label>Rate Type</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Per Day</fullName><default>false</default><label>Per Day</label></value>
            <value><fullName>Per KM</fullName><default>false</default><label>Per KM</label></value>
            <value><fullName>Flat Monthly</fullName><default>false</default><label>Flat Monthly</label></value>
            <value><fullName>Actual</fullName><default>false</default><label>Actual</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>