force-app/main/default/objects/Expense_Eligibility__c/fields/Receipt_Required__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Required__c</fullName>
    <label>Receipt Required</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Whether receipt upload is mandatory for this expense type and band.</description>
</CustomField>