force-app/main/default/objects/Expense_Eligibility__c/fields/Receipt_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Threshold__c</fullName>
    <label>Receipt Threshold</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <defaultValue>0</defaultValue>
    <description>Receipt is mandatory only when claimed amount exceeds this threshold. 0 means always required if Receipt Required is checked.</description>
</CustomField>