force-app/main/default/objects/Expense_Eligibility__c/fields/Travel_Mode__c.field-meta.xml
<CustomField>
    <fullName>Travel_Mode__c</fullName>
    <description>Travel mode for rate differentiation. Use All for non-travel expense types. For TA, create one eligibility record per travel mode with its own Rate_Amount.</description>
    <label>Travel Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>All</fullName><default>true</default><label>All</label></value>
            <value><fullName>Bike</fullName><default>false</default><label>Bike</label></value>
            <value><fullName>Car</fullName><default>false</default><label>Car</label></value>
            <value><fullName>Auto</fullName><default>false</default><label>Auto</label></value>
            <value><fullName>Bus</fullName><default>false</default><label>Bus</label></value>
            <value><fullName>Train</fullName><default>false</default><label>Train</label></value>
            <value><fullName>Flight</fullName><default>false</default><label>Flight</label></value>
            <value><fullName>Own Vehicle</fullName><default>false</default><label>Own Vehicle</label></value>
            <value><fullName>Public Transport</fullName><default>false</default><label>Public Transport</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>