force-app/main/default/objects/Expense_Eligibility__c/fields/Travel_Type__c.field-meta.xml
<CustomField>
    <fullName>Travel_Type__c</fullName>
    <description>Which travel type this eligibility rule applies to</description>
    <label>Travel Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
                <default>true</default>
                <label>All</label>
            </value>
            <value>
                <fullName>HQ</fullName>
            </value>
            <value>
                <fullName>Up-Country</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>