force-app/main/default/objects/Expense_Eligibility__c/validationRules/City_Tier_Limits_Non_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>City_Tier_Limits_Non_Negative</fullName>
    <active>true</active>
    <description>City Tier 1, 2, 3 limits must be non-negative when specified.</description>
    <errorConditionFormula>OR(
    AND(NOT(ISBLANK(City_Tier_1_Limit__c)), City_Tier_1_Limit__c &lt; 0),
    AND(NOT(ISBLANK(City_Tier_2_Limit__c)), City_Tier_2_Limit__c &lt; 0),
    AND(NOT(ISBLANK(City_Tier_3_Limit__c)), City_Tier_3_Limit__c &lt; 0)
)</errorConditionFormula>
    <errorDisplayField>City_Tier_1_Limit__c</errorDisplayField>
    <errorMessage>City Tier limits must be non-negative.</errorMessage>
</ValidationRule>