force-app/main/default/objects/Expense_Eligibility__c/validationRules/Effective_To_After_From.validationRule-meta.xml
<ValidationRule>
    <fullName>Effective_To_After_From</fullName>
    <active>true</active>
    <description>Effective To date must be on or after Effective From date when both are specified.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Effective_From__c)),
    NOT(ISBLANK(Effective_To__c)),
    Effective_To__c &lt; Effective_From__c
)</errorConditionFormula>
    <errorDisplayField>Effective_To__c</errorDisplayField>
    <errorMessage>Effective To date must be on or after Effective From date.</errorMessage>
</ValidationRule>