force-app/main/default/objects/Expense_Eligibility__c/validationRules/Max_Per_Day_Not_For_Monthly.validationRule-meta.xml
<ValidationRule>
    <fullName>Max_Per_Day_Not_For_Monthly</fullName>
    <active>true</active>
    <description>Max Per Day cap is not applicable for Flat Monthly rate type.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Rate_Type__c, &quot;Flat Monthly&quot;),
    NOT(ISBLANK(Max_Per_Day__c)),
    Max_Per_Day__c &gt; 0
)</errorConditionFormula>
    <errorDisplayField>Max_Per_Day__c</errorDisplayField>
    <errorMessage>Max Per Day is not applicable for Flat Monthly rate type. Use Max Per Month instead.</errorMessage>
</ValidationRule>