force-app/main/default/objects/Expense_Eligibility__c/validationRules/Rate_Amount_Required_For_Non_Actual.validationRule-meta.xml
<ValidationRule>
    <fullName>Rate_Amount_Required_For_Non_Actual</fullName>
    <active>true</active>
    <description>Rate Amount is required when Rate Type is Per Day, Per KM, or Flat Monthly.</description>
    <errorConditionFormula>AND(
    NOT(ISPICKVAL(Rate_Type__c, &quot;Actual&quot;)),
    OR(ISBLANK(Rate_Amount__c), Rate_Amount__c = 0)
)</errorConditionFormula>
    <errorDisplayField>Rate_Amount__c</errorDisplayField>
    <errorMessage>Rate Amount is required when Rate Type is Per Day, Per KM, or Flat Monthly.</errorMessage>
</ValidationRule>