force-app/main/default/objects/Expense_Eligibility__c/validationRules/Receipt_Threshold_Requires_Receipt.validationRule-meta.xml
<ValidationRule>
    <fullName>Receipt_Threshold_Requires_Receipt</fullName>
    <active>true</active>
    <description>Receipt Threshold can only be set when Receipt Required is checked.</description>
    <errorConditionFormula>AND(
    NOT(Receipt_Required__c),
    NOT(ISBLANK(Receipt_Threshold__c)),
    Receipt_Threshold__c &gt; 0
)</errorConditionFormula>
    <errorDisplayField>Receipt_Threshold__c</errorDisplayField>
    <errorMessage>Receipt Threshold can only be set when Receipt Required is checked.</errorMessage>
</ValidationRule>