force-app/main/default/objects/Expense_Eligibility__c/listViews/Active_Rules.listView-meta.xml
<ListView>
    <fullName>Active_Rules</fullName>
    <columns>NAME</columns>
    <columns>Band__c</columns>
    <columns>Expense_Type__c</columns>
    <columns>Expense_Category__c</columns>
    <columns>Rate_Type__c</columns>
    <columns>Rate_Amount__c</columns>
    <columns>Max_Per_Day__c</columns>
    <filters>
        <field>Is_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filterScope>Everything</filterScope>
    <label>Active Rules</label>
</ListView>